Create dogs and its swagger documents
